GNOME Bugzilla – Bug 757639
g_object_unref warning on start
Last modified: 2015-11-09 17:49:48 UTC
Using gedit 3.18.1 on the current Ubuntu, g_object_unref() warnings are displayed on start the issue is with that code https://git.gnome.org/browse/gedit/tree/gedit/gedit-tab.c#n463 " cursor = gdk_cursor_new_from_name (display, "text"); ... g_object_unref (cursor);" the gdk function can return null (" a new GdkCursor, or NULL if there is no cursor with the given name. "), which seems to be the case on Ubuntu (that might be another problem), gedit should handle that case (same for the previous code blob)
Fixed: https://git.gnome.org/browse/gedit/commit/?id=741c22c603df1b1ab7c7314f522b6999ccea3cc2 And backported to the gnome-3-18 branch. Thanks for the bug report.
Thanks, note that it seems that most cursor themes (at least looking at the ones used/preinstalled by default on ubuntu) don't ship "progress" and "text" cursors, unsure how much of an issue for gedit that is...