Fix critical messages with NULL cursor

gdk_cursor_new_from_name() can return NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=757639