gedit/gedit-tab.c
@@ -467,7 +467,7 @@ set_cursor_according_to_state (GtkTextView   *view,
 		if (left_window != NULL)
 			gdk_window_set_cursor (left_window, cursor);
 
-		g_object_unref (cursor);
+		g_clear_object (&cursor);
 	}
 	else
 	{
@@ -478,7 +478,7 @@ set_cursor_according_to_state (GtkTextView   *view,
 		if (left_window != NULL)
 			gdk_window_set_cursor (left_window, NULL);
 
-		g_object_unref (cursor);
+		g_clear_object (&cursor);
 	}
 }
 
